--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -109,3 +109,4 @@ services:
       CONFIG_STORAGE_TOPIC: my_connect_configs
       OFFSET_STORAGE_TOPIC: my_connect_offsets
       STATUS_STORAGE_TOPIC: my_connect_statuses
+      CONNECT_VALUE_CONVERTER_SCHEMAS_ENABLE: "false"
