refactor topic name property

--- a/history-manager/src/main/resources/application.yml
+++ b/history-manager/src/main/resources/application.yml
@@ -27,4 +27,5 @@ spring:
         format_sql: true
         show_sql: true
 
-topicName: "events.public.events"
+events:
+  topicName: "events.public.events"
