fix: validation + kafka serialization/deserialization

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -120,3 +120,26 @@ services:
       OFFSET_STORAGE_TOPIC: my_connect_offsets
       STATUS_STORAGE_TOPIC: my_connect_statuses
       CONNECT_VALUE_CONVERTER_SCHEMAS_ENABLE: "false"
+
+  kadeck-db:
+    container_name: "kadeck-db"
+    ports:
+      - "5435:5432"
+    image: postgres:12.6
+    restart: on-failure:3
+    environment:
+      POSTGRES_DB: "kadeckweb"
+      POSTGRES_USER: "postgres"
+      POSTGRES_PASSWORD: "postgres"
+
+  kadeck:
+    container_name: "kadeck"
+    ports:
+      - "80:80"
+    image: xeotek/kadeck-allinone:latest
+    environment:
+      xeotek_kadeck_home: "kadeckweb"
+      xeotek_kadeck_db_username: "postgres"
+      xeotek_kadeck_db_password: "postgres"
+      xeotek_kadeck_db_url: "jdbc:postgresql://kadeck-db:5432/kadeckweb"
+
