--- a/task-validator/src/main/resources/application.yml
+++ b/task-validator/src/main/resources/application.yml
@@ -15,8 +15,7 @@ spring:
       bootstrap-servers: localhost:29092, localhost:39092
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
-      properties:
-        spring.json.trusted.packages: "*"
+      group-id: ${topicprops.groupId}
   datasource:
     username: user
     password: password
@@ -35,3 +34,4 @@ spring:
 
 topicprops:
   validateRequestTopic: "validate-request"
+  groupId: "validation-group"
