--- a/task-manager/src/test/resources/application-integration.yml
+++ b/task-manager/src/test/resources/application-integration.yml
@@ -1,25 +1,10 @@
-server:
-  port: 8082
 spring:
   application:
     name: task-manager
   kafka:
     bootstrap-servers: localhost:29092,localhost:39092
   datasource:
-    username: user
-    password: password
-    url: jdbc:postgresql://localhost:5432/tasksdb
-    hikari:
-      connection-timeout: 2000
-      maximum-pool-size: 5
-  jpa:
-    hibernate:
-      ddl-auto: update
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
-        format_sql: true
-        show_sql: true
+    url: jdbc:tc:postgresql:14.4:///
 
 kafkaprops:
   partitions: 2
@@ -31,5 +16,3 @@ kafkaprops:
   consumerAutoReset: "latest"
   producerAckConfig: "1"
   debeziumOutboxTopicName: "events.public.crud_events"
-urls:
-  validator: http://localhost:8084
